--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "logger",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "build": "tsc",
@@ -15,5 +14,9 @@
     "nodemon": "^3.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
+  },
+  "description": "",
+  "dependencies": {
+    "chalk": "^5.3.0"
   }
 }
