--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "ts-node src/index.ts",
+    "start": "ts-node src/dblogger.ts",
     "dev": "nodemon --exec ts-node src/index.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.12.12",
+    "@types/pg": "^8.11.6",
     "nodemon": "^3.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
   "description": "",
   "dependencies": {
-    "chalk": "^5.3.0"
+    "chalk": "^5.3.0",
+    "pg": "^8.12.0"
   }
 }
